# vss-rust-client

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml
.github/workflows/: build.yml
src/: client.rs  error.rs  lib.rs  types.rs
src/crypto/: chacha20.rs  chacha20poly1305.rs  mod.rs  poly1305.rs
src/headers/: lnurl_auth_jwt.rs  mod.rs
src/util/: key_obfuscator.rs  mod.rs  retry.rs  storable_builder.rs  string.rs
tests/: lnurl_auth_jwt_tests.rs  retry_tests.rs  tests.rs
vss-accessor/: Cargo.toml  build.rs
vss-accessor/src/: lib.rs  vss_error.rs
vss-accessor/src/generated-src/: org.vss.rs
vss-accessor/tests/: generate_protos.rs  tests.rs
