[package]
name = "vss-client"
version = "0.2.2"
license = "MIT OR Apache-2.0"
edition = "2021"
homepage = "https://lightningdevkit.org/"
repository = "https://github.com/lightningdevkit/vss-rust-client"
description = "Client-side library to interact with Versioned Storage Service (VSS)."
keywords = ["vss", "bitcoin", "lightning", "ldk", "bdk"]
categories = ["web-programming::http-client", "cryptography::cryptocurrencies"]

build = "build.rs"

[dependencies]
prost = "0.11.6"
reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", default-features = false, features = ["time"] }
rand = "0.8.5"
bitcoin = "0.30.2"
async-trait = "0.1.77"
url = "2.5.0"
base64 = "0.21.7"
serde = { version = "1.0.196", features = ["serde_derive"] }
serde_json = "1.0.113"

[target.'cfg(genproto)'.build-dependencies]
prost-build = { version = "0.11.3" }
reqwest =  { version = "0.11.13", default-features = false, features = ["rustls-tls", "blocking"] }

[dev-dependencies]
mockito = "0.31.1"
tokio = { version = "1.22.0", features = ["macros"]}
