[package]
name = "vss-client"
version = "0.2.2"
license = "MIT OR Apache-2.0"
edition = "2021"
homepage = "https://lightningdevkit.org/"
repository = "https://github.com/lightningdevkit/vss-rust-client"
description = "Client-side library to interact with Versioned Storage Service (VSS)."
keywords = ["vss", "bitcoin", "lightning", "ldk", "bdk"]
categories = ["web-programming::http-client", "cryptography::cryptocurrencies"]

build = "build.rs"

[features]
default = ["lnurl-auth"]
lnurl-auth = ["dep:bitcoin", "dep:url", "dep:base64", "dep:serde", "dep:serde_json", "reqwest/json"]

[dependencies]
prost = "0.11.6"
reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", default-features = false, features = ["time"] }
rand = "0.8.5"
async-trait = "0.1.77"
bitcoin = { version = "0.32.2", default-features = false, features = ["std", "rand-std"], optional = true }
url = { version = "2.5.0", default-features = false, optional = true }
base64 = { version = "0.21.7", default-features = false, optional = true }
serde = { version = "1.0.196", default-features = false, features = ["serde_derive"], optional = true }
serde_json = { version = "1.0.113", default-features = false, optional = true }

[target.'cfg(genproto)'.build-dependencies]
prost-build = { version = "0.11.3" }
reqwest =  { version = "0.11.13", default-features = false, features = ["rustls-tls", "blocking"] }

[dev-dependencies]
mockito = "0.31.1"
tokio = { version = "1.22.0", features = ["macros"]}
