[package]
name = "vss-client-ng"
version = "0.3.1"
authors = ["Leo Nash <hello@leonash.net>", "Elias Rohrer <dev@tnull.de>"]
rust-version = "1.75.0"
license = "MIT OR Apache-2.0"
edition = "2021"
homepage = "https://lightningdevkit.org/"
repository = "https://github.com/lightningdevkit/vss-client"
description = "Client-side library to interact with Versioned Storage Service (VSS)."
keywords = ["vss", "bitcoin", "lightning", "ldk", "bdk"]
categories = ["web-programming::http-client", "cryptography::cryptocurrencies"]

build = "build.rs"

[features]
default = ["lnurl-auth"]
lnurl-auth = ["dep:bitcoin", "dep:url", "dep:serde", "dep:serde_json", "reqwest/json"]

[dependencies]
prost = "0.11.6"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1", default-features = false, features = ["time"] }
rand = "0.8.5"
async-trait = "0.1.77"
bitcoin = { version = "0.32.2", default-features = false, features = ["std", "rand-std"], optional = true }
url = { version = "2.5.0", default-features = false, optional = true }
base64 = { version = "0.22", default-features = false}
serde = { version = "1.0.196", default-features = false, features = ["serde_derive"], optional = true }
serde_json = { version = "1.0.113", default-features = false, optional = true }

bitcoin_hashes = "0.14.0"
chacha20-poly1305 = "0.1.2"

[target.'cfg(genproto)'.build-dependencies]
prost-build = { version = "0.11.3" }
reqwest =  { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }

[dev-dependencies]
mockito = "0.28.0"
proptest = "1.1.0"
tokio = { version = "1.22.0", features = ["macros"]}

[lints.rust.unexpected_cfgs]
level = "forbid"
# When adding a new cfg attribute, ensure that it is added to this list.
check-cfg = [
	"cfg(genproto)",
]
