[package]
name = "vss-accessor"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.11.9"
reqwest = { version = "0.11.13", features = ["rustls-tls"] }

[dev-dependencies]
mockito = "0.31.1"
tokio = { version = "1.22.0", features = ["full"]}
prost-build = { version = "0.11.3" }
reqwest =  { version = "0.11.13", features = ["blocking"] }
